--- a/index.html
+++ b/index.html
@@ -14,30 +14,30 @@
 
 <body>
   <div class="container">
-    <header class="header">    
-      <div class="header-background">
-        <h1>Ufdyf tls</h1>
+    <div class="dropdown">
+      <div class="dropdown-menu">
+        <a href="#main-menu" class="dropdown-item">Меню</a>
+        <a href="#section-event" class="dropdown-item">Акции</a>
+        <a href="#section-deliveri" class="dropdown-item">Доставка</a>
+        <a href="" class="dropdown-item">О нас</a>
+        <a href="" class="dropdown-item">Контакты</a>
+      </div> 
+    </div>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur reiciendis consequatur atque animi nostrum sunt voluptatibus iure. Dolore, similique?</p>
-        
-        <div class="dropdown">
-          <div class="dropdown-menu">
-            <a href="#main-menu" class="dropdown-item">Меню</a>
-            <a href="#section-event" class="dropdown-item">Акции</a>
-            <a href="#section-deliveri" class="dropdown-item">Доставка</a>
-            <a href="" class="dropdown-item">О нас</a>
-            <a href="" class="dropdown-item">Контакты</a>
-          </div> 
-        </div>
+    <header class="header">      
+      <div class="header-background">
+        <h1>Nezuko</h1>
+
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur reiciendis consequatur atque animi nostrum sunt voluptatibus iure. Dolore, similique?</p>        
       </div>    
     </header>
 
-    <main class="main">
+    <main class="main"><a name="main-menu"></a>
       <div class="main-background">
-        <h2 class="main-title"><a name="main-menu"></a> Меню</h2>
+        <h2 class="main-title">Меню</h2>
         <div class="content">
           <ul class="menu">
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok qwe">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 1</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
@@ -47,7 +47,7 @@
 
             <li class="menu-item image-wok">
               <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
+                <h4 class="menu-item-title">Блюдо 2</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
                 <button class="menu-item-button">Заказать</button>
               </div> 
@@ -55,7 +55,7 @@
 
             <li class="menu-item image-wok">
               <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
+                <h4 class="menu-item-title">Блюдо 3</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
                 <button class="menu-item-button">Заказать</button>
               </div> 
@@ -107,14 +107,35 @@
     </main>
 
     <section>
-      <div class="event">
-        <h2><a name="section-event"></a>Акции</h2>
+      <div class="event"><a name="section-event"></a>
+        <div class="event-background">
+          <h2>Акции</h2>
+          <div class="event-content">
+            <div class="event-item">
+              <h4 class="event-item-title">Акция 1</h4>
+              <p class="event-item-paragraph">2 в 1 </p>
+            </div>
+
+            <div class="event-item">
+              <h4 class="event-item-title">Акция 2</h4>
+              <p class="event-item-paragraph">3 в 1</p>
+            </div>
+
+            <div class="event-item">
+              <h4 class="event-item-title">Акция 3</h4>
+              <p class="event-item-paragraph"> 2 за 10</p>
+            </div>
+          </div>  
+        </div>
       </div> 
     </section>
     
     <section>
-      <div class="delivery">
-        <h2><a name="section-deliveri"></a>Доставка</h2>
+      <div class="delivery"><a name="section-deliveri"></a>
+        <div class="delivery-background">
+          <h2>Доставка</h2>   
+          <div class="delivery-item"></div>     
+        </div>
       </div>
     </section>
 
