--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="header-background">
         <h1>Nezuko</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, pariatur reiciendis consequatur atque animi nostrum sunt voluptatibus iure. Dolore, similique?</p>        
+        <p>Это ресторан, в котором подают блюда китайской кухни, оформлены в кантонском стиле.</p>        
       </div>    
     </header>
 
@@ -37,70 +37,93 @@
         <h2 class="main-title">Меню</h2>
         <div class="content">
           <ul class="menu">
-            <li class="menu-item image-wok qwe">
+            <li class="menu-item image-wok one">
               <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <h4 class="menu-item-title">Лапша с креветками</h4>
+                <p class="menu-iten-paragraph">Пшеничная лапша с мясом цыпленка и креветками в соусе Лемонграсс</p>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>                
               </div> 
             </li>
 
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok two">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 2</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>   
               </div> 
             </li>
 
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok three">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 3</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>   
               </div> 
             </li>
             
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok four">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 1</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>   
               </div> 
             </li>
 
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok five">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 1</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>   
               </div> 
             </li>
 
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok six">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 1</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>   
               </div> 
             </li>
 
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok seven">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 1</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>   
               </div> 
             </li>
 
-            <li class="menu-item image-wok">
+            <li class="menu-item image-wok eight">
               <div class="content-item">
                 <h4 class="menu-item-title">Блюдо 1</h4>
                 <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <button class="menu-item-button">Заказать</button>
+                <div class="content-item-bottom">
+                  <button class="menu-item-button">Заказать</button>
+                  <p>15 руб.</p>
+                </div>   
               </div> 
             </li>
-
           </ul>
         </div>
       </div>
@@ -134,6 +157,10 @@
       <div class="delivery"><a name="section-deliveri"></a>
         <div class="delivery-background">
           <h2>Доставка</h2>   
+          <div>
+            <h4>Режим работы</h2>
+            <p>С 10.00 до 22.00</p>
+          </div>
           <div class="delivery-item"></div>     
         </div>
       </div>
@@ -146,6 +173,14 @@
 
       <div class="contacts">
         <h2>Контакты</h2>
+        <label for="telefon">Связь</label>
+        <a name="telefon" href="tel: +375123456789">+375 12 345 67 89</a>
+        <br>
+        <label for="mail">Задавайте вопросы по электронной почте</label>
+        <a name="mail" href="mailto:wok@.com">wok@.com</a>
+        <br>        
+        <label for="map">Город</label>
+        <a name="map" href="https://goo.gl/maps/deyLPyzdTkF7sDDo8">Туть</a>
       </div>
     </footer>
   </div>  
