--- a/index.html
+++ b/index.html
@@ -173,14 +173,22 @@
 
       <div class="contacts">
         <h2>Контакты</h2>
-        <label for="telefon">Связь</label>
-        <a name="telefon" href="tel: +375123456789">+375 12 345 67 89</a>
-        <br>
-        <label for="mail">Задавайте вопросы по электронной почте</label>
-        <a name="mail" href="mailto:wok@.com">wok@.com</a>
-        <br>        
-        <label for="map">Город</label>
-        <a name="map" href="https://goo.gl/maps/deyLPyzdTkF7sDDo8">Туть</a>
+        <ul class="contacts-menu">
+          <li class="contacts-menu-item telefon">
+            <label for="telefon">Связь</label>
+            <a name="telefon" href="tel: +375123456789">+375 12 345 67 89</a>
+          </li>
+
+          <li class="contacts-menu-item mail">
+            <label for="mail">Задавайте вопросы по электронной почте</label>
+            <a name="mail" href="mailto:wok@mail.com">wok@mail.com</a>
+          </li>
+
+          <li class="contacts-menu-item map">
+            <label for="map">Город</label>
+            <a name="map" href="https://goo.gl/maps/deyLPyzdTkF7sDDo8" target="_blank">Туть</a>
+          </li>
+        </ul>
       </div>
     </footer>
   </div>  
