--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta name="author" content="Тесевич А Н">
 
   <link rel="stylesheet" href="./index.css">
+  
   <title>Document</title>
 </head>
 
@@ -37,95 +38,89 @@
         <h2 class="main-title">Меню</h2>
         <div class="content">
           <ul class="menu">
-            <li class="menu-item image-wok one">
-              <div class="content-item">
-                <h4 class="menu-item-title">Лапша с креветками</h4>
-                <p class="menu-iten-paragraph">Пшеничная лапша с мясом цыпленка и креветками в соусе Лемонграсс</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>                
-              </div> 
+            <li class="menu-item image-wok one" id="one" >              
+              <h4 class="menu-item-title">Лапша с креветками</h4>
+              <button class="menu-item-button">Заказать</button>           
             </li>
 
-            <li class="menu-item image-wok two">
-              <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 2</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>   
-              </div> 
+            <li class="menu-item image-wok two" id="two">
+              <h4 class="menu-item-title">Лапша сига</h4>
+              <button class="menu-item-button">Заказать</button>  
             </li>
 
-            <li class="menu-item image-wok three">
-              <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 3</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>   
-              </div> 
+            <li class="menu-item image-wok three" id="three">
+              <h4 class="menu-item-title">Лапша с кальмаром</h4>
+              <button class="menu-item-button">Заказать</button> 
             </li>
             
             <li class="menu-item image-wok four">
-              <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>   
-              </div> 
+              <h4 class="menu-item-title">Лапша сёгоги</h4>
+              <button class="menu-item-button">Заказать</button> 
             </li>
 
             <li class="menu-item image-wok five">
-              <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>   
-              </div> 
+              <h4 class="menu-item-title">Лапша с курицей</h4>
+              <button class="menu-item-button">Заказать</button> 
             </li>
 
             <li class="menu-item image-wok six">
-              <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>   
-              </div> 
+              <h4 class="menu-item-title">Пикабу</h4>
+              <button class="menu-item-button">Заказать</button>  
             </li>
 
             <li class="menu-item image-wok seven">
-              <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>   
-              </div> 
+              <h4 class="menu-item-title">Лапша с грибами</h4>
+              <button class="menu-item-button">Заказать</button> 
             </li>
 
             <li class="menu-item image-wok eight">
-              <div class="content-item">
-                <h4 class="menu-item-title">Блюдо 1</h4>
-                <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-                <div class="content-item-bottom">
-                  <button class="menu-item-button">Заказать</button>
-                  <p>15 руб.</p>
-                </div>   
-              </div> 
-            </li>
+              <h4 class="menu-item-title">Удон с овощами</h4>
+              <button class="menu-item-button">Заказать</button> 
+            </li> 
           </ul>
         </div>
+
+        <div class="content-size">
+          <div class="block zero">
+            <div class="content-item">
+
+            </div>
+          </div>
+
+
+          <div class="block one" id="block">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 1</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+
+          <div class="block two" id="blockQWE">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 2</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+
+          <div class="block three" id="blockASD">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 1</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+        </div>     
       </div>
     </main>
 
@@ -194,3 +189,5 @@
   </div>  
 </body>
 </html>
+
+<script src="./index.js"></script>
