--- a/index.html
+++ b/index.html
@@ -53,27 +53,27 @@
               <button class="menu-item-button">Заказать</button> 
             </li>
             
-            <li class="menu-item image-wok four">
+            <li class="menu-item image-wok four" id="four">
               <h4 class="menu-item-title">Лапша сёгоги</h4>
               <button class="menu-item-button">Заказать</button> 
             </li>
 
-            <li class="menu-item image-wok five">
+            <li class="menu-item image-wok five" id="five">
               <h4 class="menu-item-title">Лапша с курицей</h4>
               <button class="menu-item-button">Заказать</button> 
             </li>
 
-            <li class="menu-item image-wok six">
+            <li class="menu-item image-wok six" id="six">
               <h4 class="menu-item-title">Пикабу</h4>
               <button class="menu-item-button">Заказать</button>  
             </li>
 
-            <li class="menu-item image-wok seven">
+            <li class="menu-item image-wok seven" id="seven">
               <h4 class="menu-item-title">Лапша с грибами</h4>
               <button class="menu-item-button">Заказать</button> 
             </li>
 
-            <li class="menu-item image-wok eight">
+            <li class="menu-item image-wok eight" id="eight">
               <h4 class="menu-item-title">Удон с овощами</h4>
               <button class="menu-item-button">Заказать</button> 
             </li> 
@@ -83,12 +83,10 @@
         <div class="content-size">
           <div class="block zero">
             <div class="content-item">
-
             </div>
           </div>
 
-
-          <div class="block one" id="block">
+          <div class="block one" id="block-one">
             <div class="content-item">
               <h4 class="menu-item-title">Блюдо 1</h4>
               <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
@@ -99,7 +97,7 @@
             </div> 
           </div>
 
-          <div class="block two" id="blockQWE">
+          <div class="block two" id="block-two">
             <div class="content-item">
               <h4 class="menu-item-title">Блюдо 2</h4>
               <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
@@ -110,7 +108,62 @@
             </div> 
           </div>
 
-          <div class="block three" id="blockASD">
+          <div class="block three" id="block-three">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 1</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+
+          <div class="block four" id="block-four">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 1</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+
+          <div class="block five" id="block-five">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 1</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+
+          <div class="block six" id="block-six">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 1</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+
+          <div class="block seven" id="block-seven">
+            <div class="content-item">
+              <h4 class="menu-item-title">Блюдо 1</h4>
+              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
+              <div class="content-item-bottom">
+                <button class="menu-item-button">Заказать</button>
+                <p>15 руб.</p>
+              </div>   
+            </div> 
+          </div>
+
+          <div class="block eight" id="block-eight">
             <div class="content-item">
               <h4 class="menu-item-title">Блюдо 1</h4>
               <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
