--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a href="#main-menu" class="dropdown-item">Меню</a>
         <a href="#section-event" class="dropdown-item">Акции</a>
         <a href="#section-deliveri" class="dropdown-item">Доставка</a>
-        <a href="" class="dropdown-item">О нас</a>
+        <a href="" class="dropdown-item">Корзина</a>
         <a href="" class="dropdown-item">Контакты</a>
       </div> 
     </div>
@@ -88,89 +88,81 @@
 
           <div class="block one" id="block-one">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 1</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Кокосовый WOK с креветками и курицей</h4>
+              <p class="content-iten-paragraph">Лапша удон, тигровая креветка, красное мясо, кокосовое молоко, паста том кха, овощной микс, имбирно-чесночный соус, кинза, кунжут</p>
+              <p class="content-calory">Калорийность: На 100 г: 274,73ккал, 18,61г жиры, 8,84г белки, 17,97г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>
             </div> 
           </div>
 
           <div class="block two" id="block-two">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 2</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Лапша сига</h4>
+              <p class="content-iten-paragraph">Стеклянная лапша с окунем и овощным миксом в устричном соусе</p>
+              <p class="content-calory">Калорийность: На 100 г: 80,74ккал, 0,58г жиры, 5,64г белки, 12,40г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>   
             </div> 
           </div>
 
           <div class="block three" id="block-three">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 1</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Лапша с кальмаром</h4>
+              <p class="content-iten-paragraph">Лапша удон, лосось, кальмар, чесночный соус, овощной микс, имбирно-чесночный соус, кинза, кунжут</p>
+              <p class="content-calory">Калорийность: На 100 г: 274,73ккал, 18,61г жиры, 8,84г белки, 17,97г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>  
             </div> 
           </div>
 
           <div class="block four" id="block-four">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 1</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Лапша сёгоги</h4>
+              <p class="content-iten-paragraph">Пшеничная лапша с говядиной и овощным миксом</p>
+              <p class="content-calory">Калорийность: На 100 г: 105,02ккал, 3,62г жиры, 4,09г белки, 13,87г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>  
             </div> 
           </div>
 
           <div class="block five" id="block-five">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 1</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Лапша с курицей</h4>
+              <p class="content-iten-paragraph">Пшеничная лапша с цыпленком в соусе терияки и овощным миксом</p>
+              <p class="content-calory">Калорийность: На 100 г: 121,02ккал, 3,05г жиры, 3,87г белки, 11,11г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>  
             </div> 
           </div>
 
           <div class="block six" id="block-six">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 1</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Пикабу</h4>
+              <p class="content-iten-paragraph">Пшеничная лапша с мясом цыпленка и креветками в соусе Лемонграсс</p>
+              <p class="content-calory">Калорийность: На 100 г: 156,02ккал, 4,1г жиры, 5,21г белки, 17,2г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>   
             </div> 
           </div>
 
           <div class="block seven" id="block-seven">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 1</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Лапша с грибами</h4>
+              <p class="content-iten-paragraph">Яичная лапша с древесным грибом муэр</p>
+              <p class="content-calory">Калорийность: На 100 г: 95ккал, 2,32г жиры, 4,1г белки, 10,26г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>   
             </div> 
           </div>
 
           <div class="block eight" id="block-eight">
             <div class="content-item">
-              <h4 class="menu-item-title">Блюдо 1</h4>
-              <p class="menu-iten-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque, totam.</p>
-              <div class="content-item-bottom">
-                <button class="menu-item-button">Заказать</button>
-                <p>15 руб.</p>
-              </div>   
+              <h4 class="content-item-title">Удон с овощами</h4>
+              <p class="content-iten-paragraph">Пшеничная лапша с овощным миксом</p>
+              <p class="content-calory">Калорийность: На 100 г: 88,72ккал, 2,14г жиры, 3,09г белки, 11,1г углеводы</p>
+              <button class="content-item-button">Заказать</button>
+              <p class="price">15 руб.</p>   
             </div> 
           </div>
         </div>     
@@ -183,18 +175,18 @@
           <h2>Акции</h2>
           <div class="event-content">
             <div class="event-item">
-              <h4 class="event-item-title">Акция 1</h4>
-              <p class="event-item-paragraph">2 в 1 </p>
+              <h4 class="event-item-title">Акция "Простая арифметика"</h4>
+              <p class="event-item-paragraph">При заказе двух сетов третий в подарок!</p>
             </div>
 
             <div class="event-item">
-              <h4 class="event-item-title">Акция 2</h4>
-              <p class="event-item-paragraph">3 в 1</p>
+              <h4 class="event-item-title">Акция "Чёткая неделя"</h4>
+              <p class="event-item-paragraph">Во вторник, четверг, субботу на второй сет скидка 50%!</p>
             </div>
 
             <div class="event-item">
-              <h4 class="event-item-title">Акция 3</h4>
-              <p class="event-item-paragraph"> 2 за 10</p>
+              <h4 class="event-item-title">Акция "День рождения"</h4>
+              <p class="event-item-paragraph">Каждому имениннику скидка в 20%!</p>
             </div>
           </div>  
         </div>
@@ -204,21 +196,20 @@
     <section>
       <div class="delivery"><a name="section-deliveri"></a>
         <div class="delivery-background">
-          <h2>Доставка</h2>   
-          <div>
+          <h2>Доставка</h2>            
+          <div class="delivery-content" >
             <h4>Режим работы</h2>
             <p>С 10.00 до 22.00</p>
           </div>
-          <div class="delivery-item"></div>     
+
+          <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d78358.3652230281!2d25.9905529!3d52.1397982!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4727a1374eea7ead%3A0x14180b1bbb440aa1!2z0J_QuNC90YHQug!5e0!3m2!1sru!2sby!4v1684046763092!5m2!1sru!2sby" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="qwe"></iframe>
+          </div>    
         </div>
       </div>
     </section>
 
     <footer class="footer">
-      <div class="about">
-        <h2> О нас</h2>
-      </div>
-
       <div class="contacts">
         <h2>Контакты</h2>
         <ul class="contacts-menu">
@@ -232,15 +223,15 @@
             <a name="mail" href="mailto:wok@mail.com">wok@mail.com</a>
           </li>
 
-          <li class="contacts-menu-item map">
+          <li class="contacts-menu-item map-footer">
             <label for="map">Город</label>
             <a name="map" href="https://goo.gl/maps/deyLPyzdTkF7sDDo8" target="_blank">Туть</a>
           </li>
         </ul>
       </div>
     </footer>
-  </div>  
+  </div>
 </body>
 </html>
 
-<script src="./index.js"></script>
+<script src="./index.js"></script> 
