--- a/index.html
+++ b/index.html
@@ -21,19 +21,18 @@
         <a href="#section-event" class="dropdown-item">Акции</a>
         <a href="#section-deliveri" class="dropdown-item">Доставка</a>
         <a href="" class="dropdown-item">Корзина</a>
-        <a href="" class="dropdown-item">Контакты</a>
+        <a href="#section-contacts" class="dropdown-item">Контакты</a>
       </div> 
-    </div>
-
+    </div> 
+    
     <header class="header">      
       <div class="header-background">
         <h1>Nezuko</h1>
-
         <p>Это ресторан, в котором подают блюда китайской кухни, оформлены в кантонском стиле.</p>        
       </div>    
     </header>
 
-    <main class="main"><a name="main-menu"></a>
+    <main class="main"><a name="main-menu" id="main-name"></a>
       <div class="main-background">
         <h2 class="main-title">Меню</h2>
         <div class="content">
@@ -210,7 +209,7 @@
     </section>
 
     <footer class="footer">
-      <div class="contacts">
+      <div class="contacts"><a name="section-contacts"></a>
         <h2>Контакты</h2>
         <ul class="contacts-menu">
           <li class="contacts-menu-item telefon">
