--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2 class="main-title">Меню</h2>
         <div class="content">
           <ul class="menu">
-            <li class="menu-item image-wok one" id="one" >              
+            <li class="menu-item image-wok one" id="one">              
               <h4 class="menu-item-title">Лапша с креветками</h4>
               <button class="menu-item-button">Заказать</button>           
             </li>
@@ -224,7 +224,7 @@
 
           <li class="contacts-menu-item map-footer">
             <label for="map">Город</label>
-            <a name="map" href="https://goo.gl/maps/deyLPyzdTkF7sDDo8" target="_blank">Туть</a>
+            <a name="map" href="https://goo.gl/maps/deyLPyzdTkF7sDDo8" target="_blank">Пинск</a>
           </li>
         </ul>
       </div>
