--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="keyworld" content=" ">
-  <meta name="description" content=" ">
+  <meta name="keyworld" content="Ресторан китайской кухни. Nezuko. Доставка WOK">
+  <meta name="description" content="Вкусная китайская еда">
   <meta name="author" content="Тесевич А Н">
 
   <link rel="stylesheet" href="./index.css">
   
-  <title>Document</title>
+  <title>Nezuko</title>
 </head>
 
 <body>
